@@ -55,6 +55,7 @@ private slots:
     void previewDiamond();
     void previewSquare();
     void previewSquareChoppy();
+    void previewSquareTrue();
     void previewLeaf();
     void previewLissajous();
 
